<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="83dp"
        android:layout_height="39dp"
        android:text="@string/todo"
        android:textColor="#8F00FF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="673dp"
        android:background="@drawable/menu_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/title"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:autofillHints=" "
        android:background="@drawable/editboc"
        android:hint="@string/title"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="1dp"
        android:paddingRight="10dp"
        android:paddingBottom="1dp"
        android:textColorHint="#FCA311"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />


    <EditText
        android:id="@+id/description"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:autofillHints=" "
        android:background="@drawable/editboc"
        android:hint="@string/description"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="1dp"
        android:paddingRight="10dp"
        android:paddingBottom="1dp"
        android:textColorHint="#FCA311"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />


    <EditText
        android:id="@+id/space"
        android:layout_width="370dp"
        android:layout_height="280dp"
        android:autofillHints=" "
        android:background="@drawable/editboc"
        android:hint=""
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="1dp"
        android:paddingRight="10dp"
        android:paddingBottom="1dp"
        android:textColorHint="#FCA311"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/enter"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="568dp"
        android:background="@drawable/btn_bg"
        android:text="@string/Save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="109dp"
        android:minHeight="48dp"
        android:text="@string/add_reminder"
        app:layout_constraintBottom_toTopOf="@+id/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFC107"
        android:onClick="openDatePicker"
        android:text="@string/jan_01_2022"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:height="15dp"
        android:onClick="popTimePicker"
        android:text="@string/select_time"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879"
        tools:ignore="UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>